k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-app-redis
  annotations: { "argocd.argoproj.io/sync-wave": "-5" }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: test-app-redis
spec:
  selector: { matchLabels: { app: redis } }
  template:
    metadata: { labels: { app: redis } }
    spec:
      containers:
      - name: redis
        image: redis:7
        command: ["redis-server"]
        # Використовуємо пароль із секрету для запуску сервера
        args: ["--requirepass", "$(REDIS_PASSWORD)"]
        ports: [{ containerPort: 6379 }]
        volumeMounts: [{ name: data, mountPath: /data }]
      volumes:
      - name: data
        persistentVolumeClaim: { claimName: redis-pvc }
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: test-app-redis
spec:
  selector: { app: redis }
  ports: [{ port: 6379, targetPort: 6379 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: test-app-redis
spec:
  selector: { matchLabels: { app: backend } }
  template:
    metadata: { labels: { app: backend } }
    spec:
      containers:
      - name: backend
        image: registry.registry.svc.cluster.local:5000/test-app-redis:build-run-6939b
        ports: [{ containerPort: 3001 }]
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: test-app-redis
spec:
  selector: { app: backend }
  ports: [{ port: 3001, targetPort: 3001 }]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: test-app-redis
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: test-app-redis.barbariska.fun
    http: { paths: [{ path: /, pathType: Prefix, backend: { service: { name: backend-service, port: { number: 3001 } } } }] }
